Changelog
=========


1.14.7 (unreleased)
-------------------

- Fix authentication problem with bin/upgrade command.
  [jone]


1.14.6 (2015-07-22)
-------------------

- Return context manager to allow "as" statements.
  [lknoepfel]


1.14.5 (2015-05-20)
-------------------

- Update quickinstaller product version when upgrading a package.
  [jone]


1.14.4 (2015-04-09)
-------------------

- Fix post upgrade ordering which was broken since 1.11.0.
  [jone]


1.14.3 (2015-03-29)
-------------------

- Fix error in upgrade-step:directory directive.
  The error occured when the directory was a subdirectory relative to the
  ZCML directory, causing the package module to be replaced with the
  upgrades package directory in sys.modules.
  [jone]

- Fix issue with transaction note length when a large not already exists.
  When the transaction note already has maximum length (e.g. with Archetypes notes),
  nothing more should be added.
  Also increased the threshold back (reduced in 1.14.2).
  [jone]


1.14.2 (2015-03-25)
-------------------

- Reduce maximum transaction note length used by ftw.upgrade.
  [jone]


1.14.1 (2015-03-18)
-------------------

- Command: fix instance discover when bound to public interface.
  [jone]


1.14.0 (2015-02-24)
-------------------

- Command: add fake terminal fallback when blessed cannot be loaded.
  This can happen for example when Python is built without curses support.
  [jone]

- ``bin/upgrade recook`` command for recooking resources.
  [jone]

- Recook resources after installing upgrades.
  [jone]

- plone.reload support for upgrade step directory.
  [jone]


1.13.0 (2015-02-20)
-------------------

- ``bin/upgrade``: automatically authenticate with a tempfile
  negotiation mechanism when no other authentication information is
  provided.
  [jone]

- New ``bin/upgrade user`` command for testing authentication.
  [jone]


1.12.0 (2015-02-16)
-------------------
